--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=MINDS-i-Trailer
-version=0.0.1
+version=0.0.2
 author=MINDS-i corp.
 maintainer=MINDS-i <code@mymindsi.com>
 sentence=Code to run and configure MINDS-i trailers
@@ -7,4 +7,4 @@ paragraph=This library contains trailer targets and calibration code
 category=Device Control
 url=https://mindsieducation.com/pages/programming-resources
 architectures=avr
-depends=MINDSi MINDS-i-Utils
+depends=MINDSi,MINDS-i-Utils
