Update examples; use common libs

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
-name=MINDS-i-Trailer
-version=0.0.3
+name=MINDS-i-Farming
+version=1.0.0
 author=MINDS-i corp.
 maintainer=MINDS-i <code@mymindsi.com>
-sentence=Code to run and configure MINDS-i trailers
-paragraph=This library contains trailer targets and calibration code
+sentence=Code for MINDS-i Farming applications
+paragraph=This library contains code specific to MINDS-i Farming applications
 category=Device Control
 url=https://mindsieducation.com/pages/programming-resources
 architectures=avr
-depends=MINDSi,MINDS-i-Utils
+depends=MINDS-i-Common, NewPing
